<resources>
    <string name="app_name">Phone Dialer</string>
    <string name="phone_number">Enter Number</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="number_star">*</string>
    <string name="number_hash">#</string>
    <string name="number_backspace"><![CDATA[<<]]></string>
</resources>